2010-10-13	Olivier Bilodeau <obilodeau@inverse.ca>
	* Lots: Whitespace changes to lots of files based on the result of the
	last coding-style test results

2010-10-12	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/addons/freeradius-integration, 
	pf/addons/freeradius-integration/README, 
	pf/addons/freeradius-integration/freeradius-nas-table.sql, 
	pf/lib/pf/freeradius.pm, pf/bin/pfcmd, pf/conf/switches.conf, 
	pf/conf/ui.conf, pf/html/admin/configuration/switches.php,
	pf/lib/pf/SNMP.pm, pf/lib/pf/SwitchFactory.pm, pf/lib/pf/pfcmd/pfcmd.pm,
	pf/t/SwitchFactory.t, pf/t/coding-style.t, pf/t/critic.t, 
	pf/t/data/switches.conf, pf/t/data.t, pf/t/pf.t: New radiusSecret 
	parameter in conf/switches.conf. This allows to automatically configure
	FreeRADIUS' clients.conf (NAS aka client switches or APs). Right now
	it's disabled by default but one can enable it using the new addons
	instructions (addons/freeradius-integration/README). Fixes #1028;
	http://www.packetfence.org/bugs/view.php?id=1028

2010-10-08	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/web.pm: A well-placed typo was introduced in revno: 
	bb21d5f588c910e0c0bbc73881056dde72017518. I'm glad I fixed it.
	Also improved indentation of the logger call while I was at it.

	* pf/lib/pf/violation.pm: Fixes to violation priorities. They were
	inforced in the reverse order which broke scans when using default
	configuration files.

	* pf/bin/pfcmd: Better error reporting on file permission errors.
	Fixes #1088;
	http://www.packetfence.org/bugs/view.php?id=1088

	* pf/t/coding-style.t: New coding-style test suite that validates
	presence of tab characters for now. Added to all and smoke test
	suites.

2010-10-07      Regis Balzard <rbalzard@inverse.ca>
	* pf/lib/pf/SNMP/HP/Controller_MSM710.pm, pf/README_SWITCHES, 
	pf/html/admin/configuration/switches_add.php,
	pf/html/admin/configuration/switches_edit.php, pf/t/critic.t, 
	pf/t/hardware-snmp-objects.t, pf/t/pod.t: Added support for HP ProCurve