@@ -109,6 +109,8 @@ Nortel ES325                 |    XX    |    --    |    XX    |    XX    |
 -----------------------------|----------|----------|----------|----------|
 Nortel BPS2000               |    XX    |    --    |    XX    |    XX    |
 -----------------------------|----------|----------|----------|----------|
+SMC TS6128L2                 |    XX    |    --    |    XX    |    --    |
+-----------------------------|----------|----------|----------|----------|
 SMC TS6224M                  |    XX    |    --    |    ??    |    --    |
 -----------------------------|----------|----------|----------|----------|
 SMC SMC8824M - SMC8848M      |    XX    |    --    |    XX    |    --    |
